unpackaged/main/default/objects/pse__Proj__c/fields/Accounting_Report_Data_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Report_Data_Uploaded__c</fullName>
    <description>Date of upload of Total Accounting Backlog field</description>
    <inlineHelpText>Date of upload of Total Accounting Backlog field</inlineHelpText>
    <label>Accounting Report Data Uploaded</label>
    <type>Date</type>
</CustomField>