unpackaged/main/default/objects/pse__Proj__c/fields/Backlog_Category__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Category__c</fullName>
    <description>IT3094347</description>
    <label>Backlog Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Order</fullName>
            </value>
            <value>
                <fullName>Delivering</fullName>
            </value>
            <value>
                <fullName>Customer Hold</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Pending Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>