unpackaged/main/default/objects/pse__Proj__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <inlineHelpText>Denotes status of Billing Events / Rev. Recognition. Defaults to Open; set to Completed prior to final Accounting Event.</inlineHelpText>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>