unpackaged/main/default/objects/pse__Proj__c/fields/Closing_Report_Attached__c.field-meta.xml
<CustomField>
    <fullName>Closing_Report_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IT3012738. Yuri Yulaev.</description>
    <label>Closing Report Attached</label>
    <type>Checkbox</type>
</CustomField>