unpackaged/main/default/objects/pse__Proj__c/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>pse__Opportunity__r.Contract_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date the annual or multi-year contract starts.  Is equal to the date the customer signs the contract.</inlineHelpText>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>