unpackaged/main/default/objects/pse__Proj__c/fields/Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager__c</fullName>
    <description>The F5 CSM assigned to this Customer's Account.</description>
    <formula>pse__Account__r.CSM__r.FullName__c</formula>
    <inlineHelpText>The F5 CSM assigned to this Customer's Account.</inlineHelpText>
    <label>Customer Success Manager</label>
    <type>Text</type>
</CustomField>