unpackaged/main/default/objects/pse__Proj__c/fields/Decoded_SARK_Key__c.field-meta.xml
<CustomField>
    <fullName>Decoded_SARK_Key__c</fullName>
    <description>IT3128671</description>
    <label>Decoded SARK Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>