unpackaged/main/default/objects/pse__Proj__c/fields/Deferred_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Report_Amount__c</fullName>
    <description>Upload of data from Deferred tab of the Deferred Report</description>
    <inlineHelpText>Upload of data from Deferred tab of the Deferred Report.</inlineHelpText>
    <label>Deferred Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>