unpackaged/main/default/objects/pse__Proj__c/fields/Deferred_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Report_Date__c</fullName>
    <description>Upload of data from Deferred tab of the Deferred Report.</description>
    <inlineHelpText>Upload of data from Deferred tab of the Deferred Report.</inlineHelpText>
    <label>Deferred Report Date</label>
    <type>Date</type>
</CustomField>