unpackaged/main/default/objects/pse__Proj__c/fields/Disagg_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disagg_Report_Amount__c</fullName>
    <description>Upload of data from Accounting Disagg report for recognized revenue.</description>
    <inlineHelpText>Upload of data from Accounting Disagg report for recognized revenue.</inlineHelpText>
    <label>Disagg Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>