unpackaged/main/default/objects/pse__Proj__c/fields/Disagg_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Disagg_Report_Date__c</fullName>
    <description>Date the Disagg Report was sent that was used to upload Disagg Report field</description>
    <inlineHelpText>Date the Disagg Report was sent that was used to upload Disagg Report field</inlineHelpText>
    <label>Disagg Report Date</label>
    <type>Date</type>
</CustomField>