unpackaged/main/default/objects/pse__Proj__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <formula>pse__Opportunity__r.Distributor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Account</label>
    <type>Text</type>
</CustomField>