unpackaged/main/default/objects/pse__Proj__c/fields/Exclude_from_TAP_Communication__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_TAP_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the field is set to TRUE, the project is excluded from TAP monthly scheduled emails to customers.</description>
    <inlineHelpText>If the field is set to TRUE, the project is excluded from TAP monthly scheduled emails to customers.</inlineHelpText>
    <label>Exclude from TAP Communication</label>
    <type>Checkbox</type>
</CustomField>