unpackaged/main/default/objects/pse__Proj__c/fields/Expense_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Expense_Backlog__c</fullName>
    <formula>pse__Expense_Budget__c - pse__Pass_Through_Billings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>