unpackaged/main/default/objects/pse__Proj__c/fields/Expiring_Comment__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Comment__c</fullName>
    <description>Upload of Expiring Comments or Variable Contract End Date from deferred report and variable tab</description>
    <inlineHelpText>Upload of Expiring Comments or Variable Contract End Date from deferred report and variable tab</inlineHelpText>
    <label>Expiring Comment</label>
    <type>TextArea</type>
</CustomField>