unpackaged/main/default/objects/pse__Proj__c/fields/FFX_PSR_BudgetsSegment__c.field-meta.xml
<CustomField>
    <fullName>FFX_PSR_BudgetsSegment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PSR Budgets Segment</label>
    <type>Checkbox</type>
</CustomField>