unpackaged/main/default/objects/pse__Proj__c/fields/FFX_PSR_Scope_Status__c.field-meta.xml
<CustomField>
    <fullName>FFX_PSR_Scope_Status__c</fullName>
    <description>Please enter the scope status for the week ending date for inclusion in the weekly status report.</description>
    <inlineHelpText>Please enter the scope status for the week ending date for inclusion in the weekly status report.</inlineHelpText>
    <label>PSR Scope Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>