unpackaged/main/default/objects/pse__Proj__c/fields/Flexible_Delivery_Options__c.field-meta.xml
<CustomField>
    <fullName>Flexible_Delivery_Options__c</fullName>
    <description>ENH22784.</description>
    <label>Flexible Delivery Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any Resource</fullName>
            </value>
            <value>
                <fullName>Bench Delivery</fullName>
            </value>
            <value>
                <fullName>Blended F5/Partner Delivery</fullName>
            </value>
            <value>
                <fullName>F5 Only</fullName>
            </value>
            <value>
                <fullName>F5 Only – Federal Clearance</fullName>
            </value>
            <value>
                <fullName>Guardian Delivery</fullName>
            </value>
            <value>
                <fullName>SubK with Permission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>