unpackaged/main/default/objects/pse__Proj__c/fields/Install_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Install_Report_Amount__c</fullName>
    <description>Upload of data from Install Report for install SKU backlog</description>
    <inlineHelpText>Upload of data from Install Report for install SKU backlog</inlineHelpText>
    <label>Install Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>