unpackaged/main/default/objects/pse__Proj__c/fields/Install_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Report_Date__c</fullName>
    <description>Date the Install Report was sent that was used to upload Install Report Amount field</description>
    <inlineHelpText>Date the Install Report was sent that was used to upload Install Report Amount field</inlineHelpText>
    <label>Install Report Date</label>
    <type>Date</type>
</CustomField>