unpackaged/main/default/objects/pse__Proj__c/fields/Last_Communication_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Communication_Date__c</fullName>
    <description>Indicates most recent interaction with Customer. Manually update upon initial contact with Customer to schedule Delivery Dates and/or other significant interaction.</description>
    <inlineHelpText>Indicates most recent interaction with Customer. Manually update upon initial contact with Customer to schedule Delivery Dates and/or other significant interaction.</inlineHelpText>
    <label>Last Communication Date</label>
    <type>Date</type>
</CustomField>