unpackaged/main/default/objects/pse__Proj__c/fields/Marked_for_closure__c.field-meta.xml
<CustomField>
    <fullName>Marked_for_closure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked for closure</label>
    <type>Checkbox</type>
</CustomField>