unpackaged/main/default/objects/pse__Proj__c/fields/OASIS_Customer_Amount__c.field-meta.xml
<CustomField>
    <fullName>OASIS_Customer_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Deprecating as part of PSA 2.0 clean-up. Initially created for PSA 1.0 but not utilized.</description>
    <inlineHelpText>Deprecating as part of PSA 2.0 clean-up. Initially created for PSA 1.0 but not utilized.</inlineHelpText>
    <label>OASIS Customer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>