unpackaged/main/default/objects/pse__Proj__c/fields/of_Budget__c.field-meta.xml
<CustomField>
    <fullName>of_Budget__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>IF( pse__Bookings__c = 0, 0, pse__Billings__c / pse__Bookings__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects percent of Budget used to-date. Begins at 0% and increases as Time Cards are Approved for Billing or Revenue Recognition. [calculation = Billings divided by Bookings].</inlineHelpText>
    <label>% of Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>