unpackaged/main/default/objects/pse__Proj__c/fields/of_Hours__c.field-meta.xml
<CustomField>
    <fullName>of_Hours__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>IF( pse__Planned_Hours__c = 0, 0, (( pse__Billable_Internal_Hours__c  +  pse__Billable_External_Hours__c ) /  pse__Planned_Hours__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>