unpackaged/main/default/objects/pse__Proj__c/fields/OpportunityBookings__c.field-meta.xml
<CustomField>
    <fullName>OpportunityBookings__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>pse__Opportunity__r.pse__Services_Attached_From_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Services Attached From Products on the Opportunity</inlineHelpText>
    <label>Opportunity Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>