unpackaged/main/default/objects/pse__Proj__c/fields/Owner_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Current_User__c</fullName>
    <formula>Owner:User.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is Current User</label>
    <type>Checkbox</type>
</CustomField>