unpackaged/main/default/objects/pse__Proj__c/fields/PO_Attached__c.field-meta.xml
<CustomField>
    <fullName>PO_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ADO 269310 Lift and Shift PSA</description>
    <label>PO Attached</label>
    <type>Checkbox</type>
</CustomField>