unpackaged/main/default/objects/pse__Proj__c/fields/PO_Number_to_F5__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_to_F5__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>pse__Opportunity__r.po_to_f5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>