unpackaged/main/default/objects/pse__Proj__c/fields/Prior_Week_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Week_Ending_Date__c</fullName>
    <formula>IF( TODAY() = TODAY() - MOD( TODAY() - DATE(0001,1,1) , 7), 
      TODAY() - MOD( TODAY() - DATE(0001,1,1) , 7) - 7,
      TODAY() - MOD( TODAY() - DATE(0001,1,1) , 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Week Ending Date</label>
    <type>Date</type>
</CustomField>