unpackaged/main/default/objects/pse__Proj__c/fields/Product_Services_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Services_Amount__c</fullName>
    <formula>pse__Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bookings for PS</inlineHelpText>
    <label>Product &amp; Services Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>