unpackaged/main/default/objects/pse__Proj__c/fields/Professional_Services_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Sales_Rep__c</fullName>
    <description>PS Sales Territory Owner</description>
    <formula>pse__Opportunity__r.Territory2.Owner_PS_Sales_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Sales Territory Owner</label>
    <type>Text</type>
</CustomField>