unpackaged/main/default/objects/pse__Proj__c/fields/Professional_Svcs_Sales_Region_Territory__c.field-meta.xml
<CustomField>
    <fullName>Professional_Svcs_Sales_Region_Territory__c</fullName>
    <description>Territory Name: PS Sales</description>
    <formula>TEXT(pse__Opportunity__r.Territory2.PS_Service_Sales_Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Name: PS Sales</label>
    <type>Text</type>
</CustomField>