unpackaged/main/default/objects/pse__Proj__c/fields/Project_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Project_Backlog__c</fullName>
    <formula>pse__Bookings__c -  pse__Billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>