unpackaged/main/default/objects/pse__Proj__c/fields/Project_Notes_History__c.field-meta.xml
<CustomField>
    <fullName>Project_Notes_History__c</fullName>
    <description>This field concatenates the info entered in Project Status Notes and Notes fields to create a history to track backlog, customer communication, project status, etc. Date format is MM/DD/YYYY</description>
    <inlineHelpText>This field concatenates the info entered in Project Status Notes and Notes fields to track history.  Date format is MM/DD/YYYY</inlineHelpText>
    <label>Project Notes History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>