unpackaged/main/default/objects/pse__Proj__c/fields/Project_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Site contact person for overall project.  If a name is not available, it first must be added as a Contact at the Account level</inlineHelpText>
    <label>Project Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Project Site Contact)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>