unpackaged/main/default/objects/pse__Proj__c/fields/PS_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>PS_Engagement_Type__c</fullName>
    <label>PS Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architect/Design</fullName>
            </value>
            <value>
                <fullName>Audit/Re-Cert</fullName>
            </value>
            <value>
                <fullName>Emergency Response</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>OASIS</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Staff Aug</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>