unpackaged/main/default/objects/pse__Proj__c/fields/PS_Sub_theatre__c.field-meta.xml
<CustomField>
    <fullName>PS_Sub_theatre__c</fullName>
    <description>7/28/20 M.Kim: Deprecating as part of PSA 2.0 clean-up. Initially created for PSA 1.0 but not utilized. In addition, new RPG Hierarchy achieves original purpose of Field.
2015 - TKT233762 - Groupings within theatres for reporting purposes</description>
    <formula>IF(
  OR(
    CONTAINS( pse__Region__r.Name, 'TRAFFIX' ),
    pse__Region__r.Name = 'APAC-INDIA',
    pse__Region__r.Name = 'APAC-KOREA',
    pse__Region__r.Name = 'JAPAN',
    pse__Region__r.pse__Parent_Region__r.Name = 'AMERICAS-N AMERICA',
    pse__Region__r.Name = 'F5 CORP'
  ),
  pse__Region__r.Name,
  pse__Region__r.pse__Parent_Region__r.Name
)</formula>
    <inlineHelpText>7/28/20 M.Kim: Deprecating as part of PSA 2.0 clean-up. Initially created for PSA 1.0 but not utilized. In addition, new RPG Hierarchy achieves original purpose of Field.</inlineHelpText>
    <label>PS Sub-theatre</label>
    <type>Text</type>
</CustomField>