unpackaged/main/default/objects/pse__Proj__c/fields/PS_Theatre__c.field-meta.xml
<CustomField>
    <fullName>PS_Theatre__c</fullName>
    <description>TKT233762 - Highest level from reporting hierarchy</description>
    <formula>IF(
  CONTAINS( pse__Region__r.Name, '-' ),
  LEFT( pse__Region__r.Name, FIND( '-', pse__Region__r.Name ) -1 ),
  pse__Region__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Theatre</label>
    <type>Text</type>
</CustomField>