unpackaged/main/default/objects/pse__Proj__c/fields/PSA_Version__c.field-meta.xml
<CustomField>
    <fullName>PSA_Version__c</fullName>
    <description>To indicate if this Project was created in version PSA1.0 or PSA2.0</description>
    <formula>IF( CreatedDate &lt; DATETIMEVALUE( DATE(2021, 01, 18)), "PSA 1.0", "PSA 2.0")</formula>
    <label>PSA Version</label>
    <type>Text</type>
</CustomField>