unpackaged/main/default/objects/pse__Proj__c/fields/pse__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Time and Materials</fullName>
            </value>
            <value>
                <fullName>Mixed (Fixed/T&amp;M)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>