unpackaged/main/default/objects/pse__Proj__c/fields/pse__Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Planned_Hours__c</fullName>
    <inlineHelpText>Total of all Milestone Planned Hours.  PSA does not add up the Milestone amounts, these need to be manually summed up and entered.</inlineHelpText>
    <label>Planned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>